--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,47 +5,47 @@
   <meta charset="utf-8" />
   <title>Rudder</title>
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z6PYJWXQXW"></script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z6PYJWXQXW"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
     gtag('config', 'G-Z6PYJWXQXW');
-  </script>
+  </script> -->
 
   <meta charset="utf-8" />
 
-  <link rel="icon" href="%PUBLIC_URL%/img_favicon.png" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon-32x32.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#1888c1" />
 
   <!-- 요청 태그 추가 2023-06-20 -->
-  <meta name="naver-site-verification" content="8c53fc17588555f3d46a6bbe900f19cce0e89339" />
+  <!-- <meta name="naver-site-verification" content="8c53fc17588555f3d46a6bbe900f19cce0e89339" /> -->
 
   <meta name="author" content="Rudder" />
-  <link rel="canonical" href="https://auto-manix.com" />
+  <link rel="canonical" href="https://rudderuni.com" />
   <meta name="robots" content="index, follow">
   <meta name="title" content="Rudder">
-  <meta name="description" content="Rudder" />
+  <meta name="description" content="Rudder Together" />
   <meta name="keywords" content="Rudder">
   <meta http-equiv="publisher" content="Rudder" />
   <meta http-equiv="Other Agent" content="Rudder" />
   <meta http-equiv="Generator" content="Visual Studio Code" />
-  <meta http-equiv="Reply-To" content="amx_biz@auto-manix.com" />
-  <meta http-equiv="Email" content="amx_biz@auto-manix.com" />
+  <meta http-equiv="Reply-To" content="abcd@nacer.com" />
+  <meta http-equiv="Email" content="abcd@nacer.com" />
   <meta http-equiv="Distribution" content="Rudder" />
   <meta http-equiv="Copyright" content="Rudder" />
 
   <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=c9c362177d562158ad9b326cda148a2e"></script>
-  <link rel="apple-touch-icon" href="https://s3.ap-northeast-2.amazonaws.com/auto-manix.com/square.PNG" />
+  <link rel="apple-touch-icon" href="https://s3.ap-northeast-2.amazonaws.com/rudderuni.com/rudderlogopng.PNG" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
 
   <meta property="og:type" content="website">
   <meta property="og:title" content="Rudder">
-  <meta property="og:description" content="Rudder">
-  <meta property="og:image" content="https://s3.ap-northeast-2.amazonaws.com/auto-manix.com/square.PNG">
-  <meta property="og:url" content="https://auto-manix.com/">
+  <meta property="og:description" content="Rudder Together">
+  <meta property="og:image" content="https://s3.ap-northeast-2.amazonaws.com/rudderuni.com/rudderlogopng.PNG">
+  <meta property="og:url" content="https://rudderuni.com/">
 
 </head>
 
